--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "LoginScreen"
-include(":app")
+rootProject.name = "ParkingManager"
+include ':app'
