--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ParkingManager"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".HamburgerMenuActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat">
@@ -26,16 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-=======
         <activity
             android:name=".ParkingPassPurchaseActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MaterialComponents">
+            android:theme="@style/Theme.AppCompat">
 
         </activity>
->>>>>>> 6b7422a (Dropdown menu)
     </application>
 
 </manifest>
