--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/umbparking"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/umbparking_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ParkingManager"
         tools:targetApi="31">
@@ -28,6 +28,13 @@
         </activity>
         <activity
             android:name=".ParkingPassPurchaseActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+
+        </activity>
+        <activity
+            android:name=".PurchaseConfirmationActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MaterialComponents">
