--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,13 @@
             android:theme="@style/Theme.MaterialComponents">
 
         </activity>
+        <activity
+            android:name=".CheckoutActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+
+        </activity>
     </application>
 
 </manifest>
