Parking citation working on

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,20 @@
             android:theme="@style/Theme.MaterialComponents">
 
         </activity>
+        <activity
+            android:name=".ViewParkingPassActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+
+        </activity>
+        <activity
+            android:name=".CreateParkingCitationActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+
+        </activity>
 
     </application>
 
