--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,19 @@
 
         </activity>
 
+        <activity android:name=".ParkingSelectionActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+        </activity>
+
+        <activity android:name=".SpotConfirmationActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents">
+        </activity>
+
+
     </application>
 
 </manifest>
